# Pytranslator

./: .gitignore  README.md  pyproject.toml  smoke_run.py
src/pytranslator/: __init__.py  engine.py  main.py  manager.py  models.py
