
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytranslator"
version = "0.1.0"
description = "Offline translation client backed by Argos Translate."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Javier Calzada" }
]
dependencies = [
    "argostranslate>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
    "black>=23.0",
    "ruff>=0.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytranslator*"]
